--- a/index.html
+++ b/index.html
@@ -209,6 +209,8 @@ Error message and password prompt
 
 <li>GettingStarted</li>
 
+<li>mark条目</li>
+
 <li>TableOfContents</li>
 
 </ul>
@@ -246,7 +248,7 @@ Error message and password prompt
 {"created":"20221212102410684","title":"$:/state/tab-224541917","text":"$:/core/ui/ControlPanel/Plugins/Add/Themes","modified":"20221214083517965"},
 {"created":"20221212102336660","title":"$:/state/tab/sidebar--595412856","text":"TableOfContents","modified":"20221214082949182"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
-{"title":"$:/StoryList","created":"20221214083822990","text":"","list":"$:/ControlPanel $:/themes/tiddlywiki/vanilla GettingStarted","modified":"20221214083831013"},
+{"title":"$:/StoryList","created":"20221214084050085","text":"","list":"mark条目 GettingStarted","modified":"20221214084050085"},
 {"created":"20221212102427708","title":"$:/theme","text":"$:/themes/tiddlywiki/centralised","modified":"20221214083900117"},
 {"title":"$:/themes/tiddlywiki/centralised","name":"Centralised","author":"JeremyRuston","core-version":">=5.0.0","plugin-type":"theme","description":"Centralises the story river","dependents":"$:/themes/tiddlywiki/snowwhite","version":"5.2.3","type":"application/json","text":"{\"tiddlers\":{\"$:/themes/tiddlywiki/centralised/styles.tid\":{\"title\":\"$:/themes/tiddlywiki/centralised/styles.tid\",\"tags\":\"[[$:/tags/Stylesheet]]\",\"text\":\"\\\\rules only filteredtranscludeinline transcludeinline macrodef macrocallinline\\n\\n@media (min-width: {{$:/themes/tiddlywiki/vanilla/metrics/sidebarbreakpoint}}) {\\n\\n\\thtml .tc-page-container {\\n\\t\\ttext-align: center;\\n\\t}\\n\\n\\thtml .tc-story-river {\\n\\t\\tposition: relative;\\n\\t\\twidth: 770px;\\n\\t\\tpadding: 42px;\\n\\t\\tmargin: 0 auto;\\n\\t\\ttext-align: left;\\n\\t}\\n\\n\\thtml .tc-sidebar-scrollable {\\n\\t\\ttext-align: left;\\n\\t\\tleft: 50%;\\n\\t\\tright: 0;\\n\\t\\tmargin-left: 343px;\\n\\t}\\n}\\n\"}}}"},
 {"title":"$:/themes/tiddlywiki/heavier","name":"Heavier","author":"JeremyRuston","core-version":">=5.0.0","plugin-type":"theme","description":"Heavier font theme","dependents":"$:/themes/tiddlywiki/snowwhite","version":"5.2.3","type":"application/json","text":"{\"tiddlers\":{\"$:/themes/tiddlywiki/heavier/base\":{\"title\":\"$:/themes/tiddlywiki/heavier/base\",\"tags\":\"[[$:/tags/Stylesheet]]\",\"text\":\"\\\\rules only filteredtranscludeinline transcludeinline macrodef macrocallinline\\n\\nhtml body strong,\\nhtml body button.tc-tiddlylink,\\nhtml body a.tc-tiddlylink,\\nhtml body a.tc-tiddlylink-shadow,\\nhtml body .tc-menu-list-count {\\n\\tfont-weight: 700;\\n}\\n\\nhtml body h1,\\nhtml body h2,\\nhtml body h3,\\nhtml body h4,\\nhtml body h5,\\nhtml body h6,\\nhtml body a.tc-tiddlylink-shadow.tc-tiddlylink-resolves,\\nhtml body button.tc-tag-label,\\nhtml body span.tc-tag-label,\\nhtml body .tc-sidebar-header .tc-title a.tc-tiddlylink-resolves,\\nhtml body .tc-site-title,\\nhtml body .tc-titlebar,\\nhtml body .tc-subtitle,\\nhtml body .tc-tiddler-missing .tc-title,\\nhtml body .tc-tab-buttons button,\\nhtml body .tc-tiddler-frame .tc-tiddler-body {\\n\\tfont-weight: 500;\\n}\\n\\nhtml body .tc-view-field-name {\\n\\tfont-weight: 400;\\n}\\n\"}}}"},
@@ -258,6 +260,7 @@ Error message and password prompt
 {"created":"20221208125833128","text":"","tags":"","title":"测试","modified":"20221208125839888"},
 {"created":"20221214082955502","text":"这里随便写点东西","tags":"TableOfContents","title":"期末考试及其安排","modified":"20221214083357702"},
 {"created":"20221212110924881","text":"\\define lingo-base() $:/language/ControlPanel/Basics/\n欢迎使用 ~TiddlyWiki 及参与 ~TiddlyWiki 社群\n\n开始将重要资讯存放于 ~TiddlyWiki 之前，确认您可以可靠地保存变更是很重要的。详细资讯请参阅 https://tiddlywiki.com/#GettingStarted\n\n!! 设置此 ~TiddlyWiki\n\n\u003Cdiv class=\"tc-control-panel\">\n\n|\u003C$link to=\"$:/SiteTitle\">\u003C\u003Clingo Title/Prompt>>\u003C/$link> |\u003C$edit-text tiddler=\"$:/SiteTitle\" default=\"\" tag=\"input\"/> |\n|\u003C$link to=\"$:/SiteSubtitle\">\u003C\u003Clingo Subtitle/Prompt>>\u003C/$link> |\u003C$edit-text tiddler=\"$:/SiteSubtitle\" default=\"\" tag=\"input\"/> |\n|\u003C$link to=\"$:/DefaultTiddlers\">\u003C\u003Clingo DefaultTiddlers/Prompt>>\u003C/$link> |\u003C\u003Clingo DefaultTiddlers/TopHint>>\u003Cbr> \u003C$edit tag=\"textarea\" tiddler=\"$:/DefaultTiddlers\"/>\u003Cbr>//\u003C\u003Clingo DefaultTiddlers/BottomHint>>// |\n\u003C/div>\n\n请参阅[[控制台|$:/ControlPanel]]查看更多选项。","title":"GettingStarted","modified":"20221214083609951"},
+{"created":"20221214084058790","text":"## 标题一\n## 标题二\n","type":"text/x-markdown","title":"mark条目","tags":"$:/tags/SideBar","modified":"20221214084209237"},
 {"created":"20221214081916440","text":"\u003Cdiv class=\"tc-table-of-contents\">\n\n\u003C\u003Ctoc-selective-expandable 'TableOfContents'>>\n\n\u003C/div>","tags":"$:/tags/SideBar","title":"TableOfContents","modified":"20221214082946590","caption":"目录","list-after":""}
 ]</script><div id="storeArea" style="display:none;"></div>
 <!--~~ Library modules ~~-->
